--- a/data/students.yml
+++ b/data/students.yml
@@ -24,3 +24,9 @@
   linkedin_url: https://www.linkedin.com/in/thomasvanwelden/
   image: https://s-media-cache-ak0.pinimg.com/564x/16/7b/67/167b67432d4761c4d7ffead6bf3134ab.jpg
 -
+  fullname: Demian Ortega
+  twitter: demianortega
+  github: bidays
+  linkedin_url: https://www.linkedin.com/in/demian-ortega-marovac/
+  image: http://en.gravatar.com/userimage/34888236/0d66fb9fe602c015f5d66cccb20d8a19.jpeg
+-
